- 
    Bug 
- 
    Resolution: Done
- 
    P3: Somewhat important 
- 
    5.9.3, 5.10
- 
    Windows; macOS 10.13
- 
        02e0c30a8aad785343ba1cddba82ccfe59099445 (qt/qtbase/5.15)
When switching dragmode from RubberBandDrag to ScrollHandDrag while draging is already active in QGraphicsView, the selection is not cleared. Even changing back to RubberBandDrag does not clear the selection, until dragging is started again. Dragging in ScrollHandDrag mode does not clear the selection either.
Steps to reproduce:
- Run attached sample
- Start dragging to select some area of your choice
- While dragging is still going on (mouse button is pressed), click Ctrl button to switch the dragging mode
- EXPECTED: Blue selection area disappears
- ACTUAL: Blue selection area presists
You can change the cursor back with shift button for testing purposes.
| For Gerrit Dashboard: QTBUG-65186 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 290916,2 | QGraphicsView: Clear the rubber band when dragMode changes | 5.15 | qt/qtbase | Status: MERGED | +2 | 0 |