QGraphicsView: Clear the rubber band when dragMode changes

Without this change, and ongoing rubber-band selection will not be
cleared when the dragmode property changes (e.g. because of a key press)
which leaves a rubber-band displayed on the view.

Move the rubber-band-clearing code from mouseReleaseEvent into a private
helper that is then called from setDragMode.

Change-Id: I32c15f7fe4ef2b8002ef5dd58e22f4bb30dd2409
Fixes: QTBUG-65186
Reviewed-by: Jan Arve Sæther <jan-arve.saether@qt.io>